# ArxivAgent

./: .gitignore  README.md  app.py  config.py  implementation_plan.md  index.html  pyproject.toml  pytest.ini  requirements.txt
core/: __init__.py  agent.py  arxiv_search.py  contracts.py  exporter.py  llm.py  memory.py  pdf_parser.py  rag.py  search_service.py  threads.py
desktop/: .gitignore  README.md  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
desktop/scripts/: prepare-backend-runtime.cjs
desktop/src/electron/: main.cjs  preload.cjs  secrets-store.cjs  secrets-store.test.ts
desktop/src/mainview/: App.tsx  SetupWizard.tsx  api.ts  citations-core.ts  citations.test.ts  citations.tsx  eventReducer.test.ts  eventReducer.ts  global.d.ts  index.css  index.html  markdown.test.ts  markdown.ts  providers.ts  secrets.test.ts  secrets.ts
desktop/tests/e2e/: app.spec.ts
desktop/tests/integration/: contract.spec.ts
desktop/tests/mock-backend/: server.js
prompts/: error_recovery.txt  followup_chat.txt  query_parse.txt  refine_query.txt  result_review.txt  summary.txt  system.txt
tests/backend/: conftest.py  test_agent_pure.py  test_cancel.py  test_deps.py  test_error_protocol.py  test_export.py  test_health.py  test_llm_stream.py  test_message_ops.py  test_search_edge_cases.py  test_search_events.py  test_search_service_pure.py  test_threads.py
